fix invisible Avatar for Android 4.4 Users (gems/gold/silver is still invible :( )

--- a/styles/app.styl
+++ b/styles/app.styl
@@ -70,6 +70,7 @@ for $stage in (worst $worst) (worse $worse) (bad $bad) (neutral $neutral) (good 
   outline none
   margin-bottom 0
   background-color #dae3e5 !important
+  z-index 90
 .avatar-level
   span[tooltip="Level"]
     line-height 12px
